<resources>
    <string name="app_name">GartenhausApp</string>
    <string name="new_plant">Neue Pflanze adden</string>
    <string name="table_Plant_ID">ID</string>
    <string name="table_Plant_Name">Name</string>
    <string name="table_Plant_Location">Arduino</string>
    <string name="table_Plant_edit">Bearbeiten</string>
    <string name="delete_Plant">Löschen</string>
    <string name="save_Plant">Speichern</string>
    <string name="close_Edit">Close</string>
    <string name="table_Plant_Temp">Temperatur</string>
    <string name="table_Plant_GroundHumid">Bodenfeuchtigkeit</string>
    <string name="table_Plant_Humid">Luftfeuchtigkeit</string>
    <string name="table_Plant_UV">UV</string>
    <string name="Min">min</string>
    <string name="Max">max</string>
    <string name="btn_edit_plant">Pflanzen einstellen</string>
    <string name="btn_live">Live Aktionen</string>
    <string name="menu">Hauptmenü</string>
    <string name="ip_adresse">IP-Adresse</string>
    <string name="edit_all">Bitte alles ausfüllen!</string>
    <string name="btn_edit_arduino">Arduino einstellen</string>
    <string name="table_Arduino_ID">ID</string>
    <string name="table_Arduino_NamePflanze">Pflanzenname</string>
    <string name="table_Arduino_edit">Edit</string>
    <string name="pflanze">Pflanze</string>
    <string name="pump">Pumpe</string>
    <string name="light">Licht</string>
    <string name="spray">Sprüher</string>
    <string name="heater">Heizung</string>
    <string name="cooler">Kühlung</string>
    <string name="shutters">Rolladen</string>
    <string name="compare">Vergleichen mit</string>
    <string name="dashed">gestrichelt</string>
    <string name="graph">Graphen</string>
    <string name="live">Live</string>
    <string name="minus">-</string>
    <string name="minGmaxTemp">Min Temperatur ist größer als Max Temperatur</string>
    <string name="minGmaxHumid">Min Humid ist größer als Max Humid</string>
    <string name="minGmaxGroundHumid">Min Feucht ist größer als Max Feucht</string>
    <string name="minGmaxUV">Min UV ist größer als Max UV</string>
    <string name="tempValue">Temperatur nur zwischen 0°C und 50°C</string>
    <string name="humidValue">Humid nur zwischen 0g/m³ und 100g/m³</string>
    <string name="uvValue">UV nur zwischen 0 und 15</string>
    <string name="no">keine</string>
</resources>
