<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_Plant"
    android:onClick="btnClick_Tastatur">

    <ImageView
        android:id="@+id/imVDeletePlaint"
        android:layout_width="69dp"
        android:layout_height="53dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imVSavePlaint"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:clickable="true"
        android:contentDescription="@string/delete_Plant"
        android:focusable="true"
        app:srcCompat="@drawable/baseline_delete_black_24dp"
       android:visibility="invisible" />

    <ImageView
        android:id="@+id/imVSavePlaint"
        android:layout_width="69dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:contentDescription="@string/save_Plant"
        android:focusable="true"
        app:srcCompat="@drawable/baseline_save_black_24dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true" />

    <ImageView
        android:id="@+id/imVClosePlaint"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:contentDescription="@string/close_Edit"
        app:srcCompat="@drawable/baseline_close_black_24dp"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table_Plant_Name"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/table_Plant_Name" />


            <EditText
                android:id="@+id/edTName"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/table_Plant_Name"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="UselessLeaf" />

        <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="10dp"
            tools:ignore="UselessLeaf" />
        <LinearLayout
            android:id="@+id/llTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/table_Plant_Temp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/table_Plant_Temp" />

            <EditText
                android:id="@+id/edTminTemp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/Min"
                android:inputType="numberDecimal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:hint="@string/Max"
                android:id="@+id/edTmaxTemp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="UselessLeaf" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/table_Plant_GroundHumid"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/table_Plant_GroundHumid" />

            <EditText
                android:id="@+id/edTminGroundHumid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/Min"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edTmaxGroundHumid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/Max"
                android:inputType="numberDecimal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="UselessLeaf" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/table_Plant_Humid"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/table_Plant_Humid" />

            <EditText
                android:hint="@string/Min"
                android:id="@+id/edTminHumid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:hint="@string/Max"
                android:id="@+id/edTmaxHumid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="UselessLeaf" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/table_Plant_UV"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/table_Plant_UV" />

            <EditText
                android:hint="@string/Min"
                android:id="@+id/edTminUV"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:hint="@string/Max"
                android:id="@+id/edTmaxUV"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>