<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_Arduino">

    <Button
        android:id="@+id/btnLive"
        android:layout_width="102dp"
        android:layout_height="59dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:text="Live"
        android:layout_alignParentRight="true"
        android:onClick="btnClick_btnLive"/>
    <ImageView
        android:id="@+id/imVDeleteArduino"
        android:layout_width="69dp"
        android:layout_height="53dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/imVSaveArduino"
        android:layout_marginEnd="105dp"
        android:clickable="true"
        android:contentDescription="@string/delete_Plant"
        android:focusable="true"
        android:visibility="invisible"
        app:srcCompat="@drawable/baseline_delete_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="105dp"
        android:onClick="btnClick_DeleteArduino"/>

    <ImageView
        android:id="@+id/imVSaveArduino"
        android:layout_width="69dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:contentDescription="@string/save_Plant"
        android:focusable="true"
        app:srcCompat="@drawable/baseline_save_black_24dp"
        android:onClick="btnClick_SaveArduino"/>

    <ImageView
        android:id="@+id/imVCloseArduino"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:contentDescription="@string/close_Edit"
        android:focusable="true"
        app:srcCompat="@drawable/baseline_close_black_24dp"
        android:onClick="btnClick_CloseArduino"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="139dp"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_adresse"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/ip_adresse" />


        <EditText
            android:id="@+id/edTIP"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ip_adresse"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="94dp"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_Arduino_ID"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/table_Arduino_ID" />

        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/txVID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="214dp"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pflanze"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/pflanze" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>

    <TextView
        android:id="@+id/txVdataSend"
        android:layout_width="349dp"
        android:layout_height="167dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="83dp"
        android:layout_marginStart="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp" />

</RelativeLayout>