<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">
    <ScrollView
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="400dp">
        <TableLayout
            android:id="@+id/tableArduino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tableArduinoHeader"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/table_Arduino_ID"
                    android:layout_marginRight="24dp"
                    android:layout_marginEnd="24dp"
                    style="@style/table_Plant_Header_Style" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/table_Arduino_NamePflanze"
                    android:layout_marginRight="100dp"
                    android:layout_marginEnd="100dp"
                    style="@style/table_Plant_Header_Style"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/table_Arduino_edit"
                    style="@style/table_Plant_Header_Style"/>
            </TableRow>

        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnGraphen"
        android:layout_width="102dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="51dp"
        android:text="@string/graphen"
        android:onClick="btn_Graphen"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="51dp" />



</RelativeLayout>